--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script type="text/javascript" src="scripts/app/service/rest.js"></script>
     <script type="text/javascript" src="scripts/app/controller/login.js"></script>
     <script type="text/javascript" src="scripts/app/controller/home.js"></script>
+    <script type="text/javascript" src="scripts/app/controller/dashboard.js"></script>
     <script type="text/javascript" src="scripts/app/controller/users.js"></script>
     <script type="text/javascript" src="scripts/app/controller/permissions.js"></script>
     <script type="text/javascript" src="scripts/app/controller/forwards.js"></script>
