--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
     <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
     <script type="text/javascript" src="bower_components/angular-aria/angular-aria.js"></script>
-    <script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
+    <!--<script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>-->
+    <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script type="text/javascript" src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script type="text/javascript" src="bower_components/angular-animate/angular-animate.js"></script>
     <script type="text/javascript" src="bower_components/angular-material/angular-material.js"></script>
@@ -39,10 +40,8 @@
 <body ng-app="KnowledgeGraphApp">
 
 <div ng-cloak dir="rtl">
-    <div ng-view></div>
+    <div ui-view></div>
 </div>
-
-<!--<div ng-controller="MainController" ng-cloak dir="rtl"></div>-->
 
 </body>
 </html>
