--- a/index.html
+++ b/index.html
@@ -23,16 +23,21 @@
     <script type="text/javascript" src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script type="text/javascript" src="bower_components/angular-material-icons/angular-material-icons.min.js"></script>
 
-    <link href="bower_components/angular-material-data-table/dist/md-data-table.min.css" rel="stylesheet" type="text/css"/>
-    <script src="bower_components/angular-material-data-table/dist/md-data-table.min.js" type="text/javascript"></script>
+    <link href="bower_components/angular-material-data-table/dist/md-data-table.min.css" rel="stylesheet"
+          type="text/css"/>
+    <script src="bower_components/angular-material-data-table/dist/md-data-table.min.js"
+            type="text/javascript"></script>
 
     <link href="bower_components/angular-ivh-treeview/dist/ivh-treeview.min.css" rel="stylesheet" type="text/css"/>
-    <link href="bower_components/angular-ivh-treeview/dist/ivh-treeview-theme-basic.css" rel="stylesheet" type="text/css"/>
+    <link href="bower_components/angular-ivh-treeview/dist/ivh-treeview-theme-basic.css" rel="stylesheet"
+          type="text/css"/>
     <script src="bower_components/angular-ivh-treeview/dist/ivh-treeview.min.js" type="text/javascript"></script>
 
     <link rel="stylesheet" href="styles/main.css">
+    <script type="text/javascript" src="scripts/tools.js"></script>
     <script type="text/javascript" src="scripts/app/app.js"></script>
     <script type="text/javascript" src="scripts/app/service/rest.js"></script>
+    <script type="text/javascript" src="scripts/app/controller/main.js"></script>
     <script type="text/javascript" src="scripts/app/controller/login.js"></script>
     <script type="text/javascript" src="scripts/app/controller/home.js"></script>
     <script type="text/javascript" src="scripts/app/controller/dashboard.js"></script>
@@ -44,7 +49,7 @@
 </head>
 <body ng-app="KnowledgeGraphApp">
 
-<div ng-cloak dir="rtl">
+<div ng-cloak dir="rtl" ng-controller="MainController">
     <md-toolbar class="md-whiteframe-1dp" ng-if="localStorage.getItem('authToken')">
         <div class="md-toolbar-tools">
             <div class="md-title">سیستم گراف دانش فارسی</div>
