--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script type="text/javascript" src="bower_components/angular-messages/angular-messages.js"></script>
     <script type="text/javascript" src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script type="text/javascript" src="bower_components/angular-material-icons/angular-material-icons.min.js"></script>
+    <script type="text/javascript" src="bower_components/angular-breadcrumb/dist/angular-breadcrumb.min.js"></script>
 
     <link href="bower_components/angular-material-data-table/dist/md-data-table.min.css" rel="stylesheet"
           type="text/css"/>
@@ -33,12 +34,16 @@
           type="text/css"/>
     <script src="bower_components/angular-ivh-treeview/dist/ivh-treeview.min.js" type="text/javascript"></script>
 
+    <!--<link href="bower_components/materialize/dist/css/materialize.min.css" rel="stylesheet" type="text/css"/>-->
+    <!--<script src="bower_components/materialize/dist/js/materialize.min.js" type="text/javascript"></script>-->
+
     <link rel="stylesheet" href="styles/main.css">
     <script type="text/javascript" src="scripts/tools.js"></script>
     <script type="text/javascript" src="scripts/app/app.js"></script>
     <script type="text/javascript" src="scripts/app/service/rest.js"></script>
     <script type="text/javascript" src="scripts/app/controller/main.js"></script>
     <script type="text/javascript" src="scripts/app/controller/login.js"></script>
+    <script type="text/javascript" src="scripts/app/controller/user.js"></script>
     <script type="text/javascript" src="scripts/app/controller/home.js"></script>
     <script type="text/javascript" src="scripts/app/controller/dashboard.js"></script>
     <script type="text/javascript" src="scripts/app/controller/users.js"></script>
