ontology; show class and properties, not edit yet

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <script type="text/javascript" src="scripts/app/controller/ontology.js"></script>
 
 </head>
-<body ng-app="KnowledgeGraphApp">
+<body ng-app="KnowledgeGraphApp" class="scroll2">
 
 <div ng-cloak dir="rtl" ng-controller="MainController">
     <md-toolbar class="md-whiteframe-1dp" ng-if="localStorage.getItem('authToken')">
