--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css">
 
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
+    <script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
     <script type="text/javascript" src="bower_components/lodash/lodash.js"></script>
 
     <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
