--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script type="text/javascript" src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script type="text/javascript" src="bower_components/angular-material-icons/angular-material-icons.min.js"></script>
     <script type="text/javascript" src="bower_components/angular-breadcrumb/dist/angular-breadcrumb.min.js"></script>
+    <script type="text/javascript" src="bower_components/material-angular-paging/build/dist.min.js"></script>
 
     <link href="bower_components/angular-material-data-table/dist/md-data-table.min.css" rel="stylesheet"
           type="text/css"/>
@@ -51,6 +52,7 @@
     <script type="text/javascript" src="scripts/app/controller/permissions.js"></script>
     <script type="text/javascript" src="scripts/app/controller/forwards.js"></script>
     <script type="text/javascript" src="scripts/app/controller/ontology.js"></script>
+    <script type="text/javascript" src="scripts/app/controller/mappings.js"></script>
 
 </head>
 <body ng-app="KnowledgeGraphApp" class="scroll2">
