fix some issues

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
     <script type="text/javascript" src="scripts/app/controller/ontology.js"></script>
     <script type="text/javascript" src="scripts/app/controller/mappings.js"></script>
 
+    <script type="text/javascript" src="scripts/dnd-tree.js"></script>
+
 </head>
 <body ng-app="KnowledgeGraphApp" class="scroll2">
 
