--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 <head lang="en">
     <meta charset="utf-8">
+    <meta http-equiv="cache-control" content="no-cache"/>
+    <meta http-equiv="Pragma" content="no-cache"/>
+    <meta http-equiv="Expires" content="-1"/>
+
     <title>گراف دانش فارسی</title>
 
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no"/>
@@ -39,22 +43,22 @@
     <!--<link href="bower_components/materialize/dist/css/materialize.min.css" rel="stylesheet" type="text/css"/>-->
     <!--<script src="bower_components/materialize/dist/js/materialize.min.js" type="text/javascript"></script>-->
 
-    <link rel="stylesheet" href="styles/main.css">
-    <script type="text/javascript" src="scripts/tools.js"></script>
-    <script type="text/javascript" src="scripts/app/app.js"></script>
-    <script type="text/javascript" src="scripts/app/service/rest.js"></script>
-    <script type="text/javascript" src="scripts/app/controller/main.js"></script>
-    <script type="text/javascript" src="scripts/app/controller/login.js"></script>
-    <script type="text/javascript" src="scripts/app/controller/user.js"></script>
-    <script type="text/javascript" src="scripts/app/controller/home.js"></script>
-    <script type="text/javascript" src="scripts/app/controller/dashboard.js"></script>
-    <script type="text/javascript" src="scripts/app/controller/users.js"></script>
-    <script type="text/javascript" src="scripts/app/controller/permissions.js"></script>
-    <script type="text/javascript" src="scripts/app/controller/forwards.js"></script>
-    <script type="text/javascript" src="scripts/app/controller/ontology.js"></script>
-    <script type="text/javascript" src="scripts/app/controller/mappings.js"></script>
-
-    <script type="text/javascript" src="scripts/tree.js"></script>
+    <link rel="stylesheet" href="styles/main.css?v=960518">
+    <script type="text/javascript" src="scripts/tools.js?v=960518"></script>
+    <script type="text/javascript" src="scripts/app/app.js?v=960518"></script>
+    <script type="text/javascript" src="scripts/app/service/rest.js?v=960518"></script>
+    <script type="text/javascript" src="scripts/app/controller/main.js?v=960518"></script>
+    <script type="text/javascript" src="scripts/app/controller/login.js?v=960518"></script>
+    <script type="text/javascript" src="scripts/app/controller/user.js?v=960518"></script>
+    <script type="text/javascript" src="scripts/app/controller/home.js?v=960518"></script>
+    <script type="text/javascript" src="scripts/app/controller/dashboard.js?v=960518"></script>
+    <script type="text/javascript" src="scripts/app/controller/users.js?v=960518"></script>
+    <script type="text/javascript" src="scripts/app/controller/permissions.js?v=960518"></script>
+    <script type="text/javascript" src="scripts/app/controller/forwards.js?v=960518"></script>
+    <script type="text/javascript" src="scripts/app/controller/ontology.js?v=960518"></script>
+    <script type="text/javascript" src="scripts/app/controller/mappings.js?v=960518"></script>
+    <script type="text/javascript" src="scripts/app/controller/search.js?v=960518"></script>
+    <script type="text/javascript" src="scripts/tree.js?v=960518"></script>
 
 </head>
 <body ng-app="KnowledgeGraphApp" class="scroll2">
