search feedback #2 better UI, Sahel font

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
     <script type="text/javascript" src="scripts/app/controller/mappings.js?v=960518"></script>
     <script type="text/javascript" src="scripts/app/controller/search.js?v=960518"></script>
     <script type="text/javascript" src="scripts/tree.js?v=960518"></script>
+    <script type="text/javascript" src="scripts/date.js?v=960518"></script>
+    <script type="text/javascript" src="scripts/general.js?v=960518"></script>
 
 </head>
 <body ng-app="KnowledgeGraphApp" class="scroll2">
