--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 
     <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
     <script type="text/javascript" src="bower_components/angular-aria/angular-aria.js"></script>
-    <!--<script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>-->
     <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script type="text/javascript" src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script type="text/javascript" src="bower_components/angular-animate/angular-animate.js"></script>
@@ -30,18 +29,25 @@
     <script type="text/javascript" src="bower_components/angular-breadcrumb/dist/angular-breadcrumb.min.js"></script>
     <script type="text/javascript" src="bower_components/material-angular-paging/build/dist.min.js"></script>
 
-    <link href="bower_components/angular-material-data-table/dist/md-data-table.min.css" rel="stylesheet"
-          type="text/css"/>
-    <script src="bower_components/angular-material-data-table/dist/md-data-table.min.js"
-            type="text/javascript"></script>
+    <link href="bower_components/angular-material-data-table/dist/md-data-table.min.css" rel="stylesheet" type="text/css"/>
+    <script src="bower_components/angular-material-data-table/dist/md-data-table.min.js" type="text/javascript"></script>
 
     <link href="bower_components/angular-ivh-treeview/dist/ivh-treeview.min.css" rel="stylesheet" type="text/css"/>
-    <link href="bower_components/angular-ivh-treeview/dist/ivh-treeview-theme-basic.css" rel="stylesheet"
-          type="text/css"/>
+    <link href="bower_components/angular-ivh-treeview/dist/ivh-treeview-theme-basic.css" rel="stylesheet" type="text/css"/>
     <script src="bower_components/angular-ivh-treeview/dist/ivh-treeview.min.js" type="text/javascript"></script>
 
-    <!--<link href="bower_components/materialize/dist/css/materialize.min.css" rel="stylesheet" type="text/css"/>-->
-    <!--<script src="bower_components/materialize/dist/js/materialize.min.js" type="text/javascript"></script>-->
+    <script src="bower_components/moment/min/moment.min.js"></script>
+    <script src="bower_components/moment-jalaali/build/moment-jalaali.js"></script>
+    <link rel="stylesheet" href="bower_components/angular-material-persian-datepicker/src/datePicker.css">
+    <script src="bower_components/angular-material-persian-datepicker/src/datePicker.js"></script>
+    <script src="bower_components/angular-material-persian-datepicker/src/js/calendar.js"></script>
+    <script src="bower_components/angular-material-persian-datepicker/src/js/calendarMonth.js"></script>
+    <script src="bower_components/angular-material-persian-datepicker/src/js/calendarMonthBody.js"></script>
+    <script src="bower_components/angular-material-persian-datepicker/src/js/calendarYear.js"></script>
+    <script src="bower_components/angular-material-persian-datepicker/src/js/calendarYearBody.js"></script>
+    <script src="bower_components/angular-material-persian-datepicker/src/js/dateLocaleProvider.js"></script>
+    <script src="bower_components/angular-material-persian-datepicker/src/js/datepickerDirective.js"></script>
+    <script src="bower_components/angular-material-persian-datepicker/src/js/dateUtil.js"></script>
 
     <link rel="stylesheet" href="styles/main.css?v=960518">
     <script type="text/javascript" src="scripts/tools.js?v=960518"></script>
