client config file

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <link rel="stylesheet" href="styles/main.css?v=960713A">
     <script type="text/javascript" src="scripts/tools.js?v=960713A"></script>
     <script type="text/javascript" src="scripts/app/app.js?v=960713A"></script>
+    <script type="text/javascript" src="scripts/app/config.js?v=960713A"></script>
     <script type="text/javascript" src="scripts/app/service/rest.js?v=960713A"></script>
     <script type="text/javascript" src="scripts/app/controller/main.js?v=960713A"></script>
     <script type="text/javascript" src="scripts/app/controller/login.js?v=960713A"></script>
